--- a/manual.html
+++ b/manual.html
@@ -42,38 +42,38 @@
             <h4 style="text-align: center;">Step 1:</h4>
             <p style="font-size: 16px; text-align: center;">Choose from the 2 RegEx available in the dropdown menu.
             </p>
-            <img src="./step1.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
+            <img src="./Step1.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
             <hr>
             <h4 style="text-align: center;">Step 2:</h4>
             <p style="font-size: 16px; text-align: center;">Click the "Show DFA" button to generate the Definite Finite Automata diagram.
             </p>
-            <img src="./step2.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
+            <img src="./Step2.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
             <hr>
             <h4 style="text-align: center;">Step 3:</h4>
             <p style="font-size: 16px; text-align: center;">Input a string so that you can start
                 observing how the transitions will occur in the diagram.
             </p>
-            <img src="./step3.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
+            <img src="./Step3.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
             <hr>
             <h4 style="text-align: center;">Step 4:</h4>
             <p style="font-size: 16px; text-align: center;">Press the "Start" button to begin the simulation!
             </p>
-            <img src="./step4.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
+            <img src="./Step4.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
             <hr>
             <h4 style="text-align: center;">Step 5:</h4>
             <p style="font-size: 16px; text-align: center;">Watch the compiler show how the transitions work!.
             </p>
-            <img src="./step5.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
+            <img src="./Step5.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
             <hr>
             <h4 style="text-align: center;">Step 6:</h4>
             <p style="font-size: 16px; text-align: center;">In the end, it will show you if your string is "Valid" or "Invalid".
             </p>
-            <img src="./step6.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
+            <img src="./Step6.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
             <hr>
             <h4 style="text-align: center;">Step 7:</h4>
             <p style="font-size: 16px; text-align: center;">Check out the bottom part of the page to see the 2 RegEx's corresponding CFG and PDA!
             </p>
-            <img src="./step7.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
+            <img src="./Step7.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
             <img src="./PDA1.jpg" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
             <img src="./PDA2.png" alt="Image 1 description" style="max-width: 50%; height: auto; display:block; margin: 0 auto;">
             </div>
